[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Blender Renders/player_head_small.png" type="Texture" id=1]
[ext_resource path="res://Resources/Shaders/outline_shader.tres" type="Material" id=2]
[ext_resource path="res://Scenes/UI/UpgradeHealth.gd" type="Script" id=3]
[ext_resource path="res://Resources/main_theme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/UI/GemCost.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0235294, 0, 0.0627451, 1 )
skew = Vector2( 0.3, 0 )
border_width_left = 32
border_width_top = 8
border_width_right = 32
border_width_bottom = 8
border_color = Color( 0.0235294, 0, 0.0627451, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UpgradeHealth" type="HBoxContainer"]
margin_top = 10.0
margin_right = 922.0
margin_bottom = 190.0
theme = ExtResource( 4 )
custom_constants/separation = 20
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerHeadIcon" type="TextureRect" parent="."]
material = ExtResource( 2 )
margin_left = 174.0
margin_right = 314.0
margin_bottom = 180.0
rect_min_size = Vector2( 140, 140 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="BlackBar" type="PanelContainer" parent="."]
margin_left = 334.0
margin_top = 50.0
margin_right = 398.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_editor_description_": "	"
}

[node name="HealthBars" type="HBoxContainer" parent="BlackBar"]
margin_left = 32.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 72.0
custom_constants/separation = 32

[node name="Upgrade" type="Button" parent="."]
margin_left = 418.0
margin_top = 53.0
margin_right = 618.0
margin_bottom = 127.0
rect_min_size = Vector2( 200, 74 )
size_flags_vertical = 4
text = "Upgrade HP"

[node name="GemCost" parent="." instance=ExtResource( 5 )]
margin_left = 638.0
margin_right = 747.0
margin_bottom = 180.0

[connection signal="pressed" from="Upgrade" to="." method="_on_Upgrade_pressed"]
